/*
 * This file is part of spark.
 *
 *  Copyright (c) lucko (Luck) <luck@lucko.me>
 *  Copyright (c) contributors
 *
 *  This program is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU General Public License as published by
 *  the Free Software Foundation, either version 3 of the License, or
 *  (at your option) any later version.
 *
 *  This program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.
 *
 *  You should have received a copy of the GNU General Public License
 *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */

syntax = "proto3";

package spark;

import "spark/spark.proto";

option java_package = "me.lucko.spark.proto";
option java_outer_classname = "SparkHeapProtos";

message HeapData {
  HeapMetadata metadata = 1;
  repeated HeapEntry entries = 2;
}

message HeapMetadata {
  CommandSenderMetadata creator = 1;
  PlatformMetadata platform_metadata = 2;
  PlatformStatistics platform_statistics = 3;
  SystemStatistics system_statistics = 4;
}

message HeapEntry {
  int32 order = 1;
  int32 instances = 2;
  int64 size = 3;
  string type = 4;
}
